test/data/invalid-messages/not-nul-header-padding.message
## has one non-nul byte in header padding

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER
FIELD_NAME unkn
TYPE STRING
STRING 'a'
ALIGN 8
## kill a padding byte and replace it
CHOP 1
BYTE 'q'
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
